--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
-    <name>FP2 :: Template :: Básico</name>
+    <name>FP2 :: Prática :: 3.2</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,8 +19,8 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <groupId>utfpr.ct.dainf.if62c.pratica</groupId>
+                <artifactId>Pratica-3.2</artifactId>
                 <version>2.5</version>
                 <configuration>
                     <archive>
